--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "url": "nan"
   },
   "keywords": [
-    "fuck",
-    "the",
-    "keywords"
+    "analytics",
+    "firebase",
+    "bigquery"
   ],
   "author": "Achi Ugulava",
   "license": "UNLICENSED",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
     "node-cron": "^3.0.2"
