--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Achi Ugulava",
   "license": "UNLICENSED",
   "dependencies": {
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
