--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "test",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev":"nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,17 @@
   "dependencies": {
     "axios": "^1.5.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
-    "node-cron": "^3.0.2"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.3",
+    "node-cron": "^3.0.2",
+    "sequelize": "^6.34.0"
+  },
+  "devDependencies": {
+    "connect-livereload": "^0.6.1",
+    "livereload": "^0.9.3",
+    "nodemon": "^3.0.1"
   }
 }
